- ChangelogDialog added - Resource Strings updated - Many smaller UI bug fixes